# boeenomoto

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml  ping.yml
config/: bibliography.yaml  dictionary.yaml  encyclopedia.yaml  fauna.yaml  index.yaml
config/templates/: base.html.j2  bibliography.html.j2  dictionary.html.j2  encyclopedia.html.j2  fauna.html.j2  index.html.j2
data/: bororo.bib  dictionary.json  dictionary.tsv  encyclopedia.json  encyclopedia.yaml  encyclopedia_output.json  encyclopedia_schema.yaml  fauna.json  fauna.yaml  index.json
data/encyclopedia/: README.md  adugo aredu.md  adugo biri.md  adugo-mutillidae.md  adugo.md  adugodo.md  adugodoge aroe.md  ae.md  aimearewu.md  akiri i kuru.md  akiri-i-biri-batagagarewu.md  akodo.md  amoe erubo.md  ao.md  arago.md  aroe.md  aroe_eceba_kejebo.md  ba-1.md  ba.md  ba_1_leaf.md  ba_2.md  ba_2_penile_sheath_daily.md  ba_3_penile_sheath_festive.md  ba_4_crown.md  ba_5_house_village.md  baraedu_1.md  bataru.md  boadody.md  boe-eke.md  boe-ekudawu.md  boe-ewadaru.md  boe.md  bokwado.md  butao-butu.md  cai.md  caije.md  camu.md  camugogo.md  carugirirabo.md  ce-2.md  (+127 more)
docs/: dictionary.html  encyclopedia.html  fauna.html  index.html
scripts/: build.sh  check_encyclopedia_entries.py  convert.py  migrate_encyclopedia_to_md_dir.py  migrate_encyclopedia_to_yaml.py
